tests/cases/compiler/tsxButStartWithGeneric/index.tsx
const t = <T>() => {};"</";
//~^ ERROR: Expected
//~| ERROR: Expected
//~| ERROR: Identifier expected.
